Made "PNG" in class names uppercase
Added new "hint" parameter to the Spiral class to speed up loops in cases where the final spiral size is known
Amended README.md to include ldc
Added a few new files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,12 @@ docs/
 # Code coverage
 *.lst
 
+# macOS garbage files
+.DS_Store
+
+# Test files
+test.png
+test16.png
+
 # The actual binary
 musicimage
